# extractos-bancarios

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDITORIA.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-06-30-universal-engine-design.md  adding-new-banks.md  guia-proyecto.md  roadmap-deploy.md
src/: __init__.py  __main__.py  main.py  pipeline.py
src/cleaners/: __init__.py  filters.py  normalizer.py
src/detectors/: __init__.py  bank.py
src/extractors/: __init__.py  account.py  account_type.py  cbu.py  metadata.py  pdf.py
src/models/: __init__.py  bank.py  canonical.py  document.py  errors.py  statement.py  table.py  trace.py
src/normalizers/: __init__.py  amount.py
src/parsers/: __init__.py  base.py  factory.py  macro.py  nacion.py  provincia.py
src/processors/: __init__.py  base.py  pdfplumber_impl.py
src/serializers/: __init__.py  json.py
src/services/: __init__.py  hash_service.py  orchestrator.py  response_builder.py  s3_service.py  secret_service.py  upload_repository.py
src/stages/: __init__.py  _utils.py  block_builder.py  column_detector.py  column_mapper.py  footer_detector.py  header_detector.py  row_extractor.py  row_merger.py  table_detector.py  transaction_builder.py
src/validators/: __init__.py  schema.py
tests/: test_detectors.py  test_extractors.py  test_filters.py  test_normalizers.py  test_pipeline.py  test_validators.py
tests/laboratorio/: conftest.py  test_robustez.py
tests/mutations/: __init__.py  base.py  operators.py  properties.py  runner.py
tests/samples/: golden_macro.json  golden_nacion.json  golden_provincia_nacion.json
tests/test_parsers/: test_factory.py  test_golden_macro.py  test_macro.py  test_nacion.py  test_provincia.py
tests/test_services/: test_hash_service.py  test_orchestrator.py  test_response_builder.py  test_s3_service.py  test_upload_repository.py
tests/test_stages/: helpers.py  test_block_builder.py  test_column_detector.py  test_column_mapper.py  test_footer_detector.py  test_header_detector.py  (+4 more)
(+6 files in other folders)
