[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extractos-bancarios"
version = "1.0.0"
description = "Procesamiento de extractos bancarios argentinos en PDF"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.12"
explicit_package_bases = true
