[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extractos-bancarios"
version = "1.0.0"
description = "Procesamiento de extractos bancarios argentinos en PDF"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.0",
    "boto3>=1.34",
    "pymssql>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-boto3>=1.34",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "robustez: Mutation robustness tests (slow, ~1-5min)",
    "edge: Edge case tests for specific brittle assumptions",
    "last: Run this test last in the session",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pdfplumber"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "pymssql"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
